# EasyCFD

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_BRIEF.md  README.md  SETUP_MCP.md  docker-compose.yml  easycfd_project_brief.json  pyproject.toml
backend/: pytest.ini
backend/easycfd_core/cfd/: runner.py
backend/easycfd_core/validation/: README.md  __init__.py  safety.py  schemas.py
backend/tests/: README.md  __init__.py  conftest.py  requirements.txt  test_safety.py  test_schemas.py
examples/: schemas_demo.py
scripts/: setup_mcp.sh
tests/: test_runner.py  test_validator.py
